<resources>

    <string name="app_name">Shout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_shouts">You haven\'t received any Shouts.</string>
    <string name="separatorDesc">Separator</string>
    <string name="shoutDesc">Separator</string>
    <string name="helpDesc">Help</string>
    <string name="settingsDesc">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="avatarDesc">Avatar</string>
    <string name="menu_compose">Compose Message</string>
    <string name="shout">Shout!</string>
    <string name="attachLocation">Include Location</string>
    <string name="logoDesc">Logo</string>
    <string name="providerAuthority">org.whispercomm.shout.provider</string>
    <string name="timelineTitle">All Shouts</string>
    <string name="splashText">I am a Splash screen, look at me load!</string>
    <string name="username_change_warning">Hey, you! Changing your username is a big deal! Changing it will generate an entirely new identity, which means none of your previous Shouts wil be linked to this new username.\n\nRemember, once you change your username, there is no going back.</string>
    <string name="reshoutDesc">reshoutIcon</string>
    <string name="comment">Comments</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="reshoutDescription">Reshout</string>
    <string name="commentDescription">Comment</string>
    <string name="detailsDescription">Details</string>
    <string name="defaultUsername">ShoutUser</string>
    <string name="reshoutSuccess">Reshout successful!</string>
    <string name="reshoutFail">Reshout unsuccessful…</string>
    <string name="create_shout_failure">Unable to save your shout. Please try again.</string>
    <string name="send_shout_failure">Unable to send your shout. Please reshout later.</string>
    <string name="send_shout_success">Shout sent.</string>
    <string name="register_manes_dialog_title">Register with MANES</string>
    <string name="register_manes_dialog_message">Please register with MANES, the network used by Shout to exchange messages.</string>
    <string name="register_manes_dialog_neutral">Go to registration</string>
    <string name="install_manes_dialog_title">Install MANES</string>
    <string name="install_manes_dialog_message">Please install the client for MANES, the network used by Shout to exchange messages.</string>
    <string name="install_manes_dialog_neutral">Go to installation</string>
    <string name="user_agreement_dialog_postive">I agree.</string>
    <string name="user_agreement_dialog_negative">I decline.</string>
    <string name="user_agreement_dialog_title">Shout User Agreement</string>
    <string name="expiry_dialog_title">Update Shout</string>
    <string name="expiry_dialog_netural">OK</string>
    <string name="expiry_dialog_message">Please update to the latest version of Shout available at http://whispercomm.org/manes/downloads/shout.apk.  This version of Shout will no longer work.</string>
    <string name="serviceTickerText">Starting Shout listener service</string>
    <string name="serviceTitleText">Shout Service</string>
    <string name="serviceDescriptionText">Currently listening for nearby Shouts</string>
    <string name="splashDesc">Splash screen logo</string>
    <string name="shoutAgreement">To support our research on the types of communication protocols that make applications like Shout possible, we aggregate on our servers information that would be visible to your nearby neighbors when you Shout. The data collected consists of the content and the device location when a Shout is sent either by you or automatically by the Shout software. This data collection is only a temporary measure; once Shout is based on a true ad hoc network (rather than <a href="http://whispercomm.org/manes/">MANES</a>), absolutely no data will be logged. We hope to reach this point as soon as possible, but we need to know how this version of Shout works to make progress, which is why we are requesting to store the data.\n\nFor more information, <a href="http://whispercomm.org/shout">click here</a>.</string>
    <string name="permlab_accessShouts">read and modify stored shouts</string>
    <string name="permdesc_accessShouts">Allows the app to read or modify the shouts stored on your device.</string>
    <string name="permgrouplab_Shout">Shout</string>
    <string name="permgroupdesc_Shout">Read and send shouts.</string>
    <string name="preftitle_Avatar">Avatar</string>
    <string name="prefsummary_Avatar">Profile image displayed with your shouts.</string>
    <string name="prefsummary_Username">Set the username displayed with your shouts.</string>
    <string name="delegatepreftitle_Avatar">Get Avatar From</string>
    <string name="delegateprefcancel_Avatar">Avatar change canceled.</string>
    <string name="delegateprompt_Camera">Camera</string>
    <string name="delegateprompt_Gallery">Gallery</string>
    <string name="delegateprompt_Twitter">Twitter Profile</string>
    <string name="prefavatar_imagetoolarge">Image is too large.</string>
    <string name="delegatetwittererror_invalidscreenname">User \'%s\' not found.</string>
    <string name="delegatetwittererror_networkconnection">No network connection.</string>
    <string name="delegatetwittererror_unknown">Unknown error.</string>
    <string name="delegatetwittertitle">Enter Your Twitter Screenname</string>
    <string name="delegategalleryerror">Error retrieving image.</string>
    <string name="settings_runinbackground_warning_title">Are you sure?</string>
    <string name="settings_runinbackground_warning_message">You will not receive new shouts while this option is disabled.</string>
    <string name="tutorial_page_1_message">Shout is a location-based social media application on mobile ad hoc networks. Swipe through the following images to view the tutorial</string>
    <string name="tutorial_page_2_message">Author a new shout by clicking the speech bubble icon in the upper right corner</string>
    <string name="tutorial_page_3_message">Press shout to send your message</string>
    <string name="tutorial_page_4_message">Everybody around you will receive the Shout!</string>
    <string name="tutorial_page_5_message">When viewing the message you can reshout it, comment on it, or view more details</string>
    <string name="tutorial_page_6_message">Reshouting and commenting resends the original message (and your comment) to everyone around you</string>
    <string name="tutorial_page_7_message">Reshouters relay the message to more people</string>
    <string name="tutorial_page_8_message">Interesting messages have the potential to travel long distances!</string>
    <string name="tutorial_page_9_message">Press anywhere to continue to the Shout application</string>
    <string name="menu_include_location">Include Location</string>
    <string name="menu_send">Send</string>
    <string name="toast_tag_location">Location added to shout</string>
    <string name="toast_untag_location">Location removed from shout</string>
    <string name="menu_reshout">Reshout</string>
    <string name="menu_comment">Comment</string>
    <string name="menu_sort_received_time">Sort by received time</string>
    <string name="menu_sort_sent_time">Sort by sent time</string>
    <string name="fragment_details_header_locations">Locations</string>
    <string name="fragment_details_header_comments">Comments</string>
    <string name="fragment_details_header_reshouts">Reshouts</string>
	<string name="colorAuthority">org.whispercomm.shout.color.provider</string>
	<string name="colorExplanation">The colors around the avatar are used to distinguish different users with identical usernames. Red borders indicate high username density and possibility of impersonation</string>
</resources>