<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BackgroundGray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/SeparatorGray"
        android:paddingTop="1dip" >

        <org.whispercomm.shout.customwidgets.ShoutView
            android:id="@+id/shoutview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/list_bg"
            android:paddingBottom="5dip"
            android:paddingTop="10dip" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="175dip"
        android:layout_marginRight="10dip"
        android:background="@color/blue"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/reshoutButton"
            style="@style/TitleBarButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/commentButton"
            android:contentDescription="@string/reshoutDescription"
            android:onClick="onClickReshout"
            android:src="@drawable/reshout" />

        <ImageButton
            android:id="@+id/commentButton"
            style="@style/TitleBarButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/detailsButton"
            android:contentDescription="@string/commentDescription"
            android:onClick="onClickComment"
            android:src="@drawable/chat" />

        <ImageButton
            android:id="@+id/detailsButton"
            style="@style/TitleBarButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/detailsDescription"
            android:onClick="onClickDetails"
            android:src="@drawable/gear" />
    </RelativeLayout>

</LinearLayout>