<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/origsender"
        android:layout_marginLeft="5dip"
        android:contentDescription="@string/avatarDesc" />

    <TextView
        android:id="@+id/origsender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_toRightOf="@+id/avatar"
        android:text="OriginalSender"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/reshoutIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dip"
        android:layout_toLeftOf="@+id/sender"
        android:contentDescription="@string/reshoutDesc"
        android:src="@drawable/reshoutblue" />

    <TextView
        android:id="@+id/sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:text="Reshouter"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/origsender"
        android:layout_below="@+id/origsender"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis purus id dolor laoreet tristique. Vivamus lacus felis, pulvinar nec vestibulum ut, rutrum nec felis. Fusce ac sapien quis est viverra iaculis at ac enim. Cras dictum mi id arcu tincidunt varius. Proin id lacus tortor, sed dictum elit. Nam."
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/commentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/origsender"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/message"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:text="@string/comment"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/message"
        android:layout_marginBottom="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:text="43 minutes ago"
        android:textColor="@color/gray" />

</merge>